--- a/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
+++ b/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
@@ -2,67 +2,69 @@
 triple:          'arm64-apple-darwin'
 binary-path:     cclient
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000FA8, symSize: 0x8C }
-  - { offsetInCU: 0x58, offset: 0x58, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000FA8, symSize: 0x8C }
-  - { offsetInCU: 0xAA, offset: 0xAA, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x8C, symBinAddr: 0x100001034, symSize: 0x98 }
-  - { offsetInCU: 0xEA, offset: 0xEA, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0x124, symBinAddr: 0x1000010CC, symSize: 0xC0 }
-  - { offsetInCU: 0x12A, offset: 0x12A, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x1E4, symBinAddr: 0x10000118C, symSize: 0xD0 }
-  - { offsetInCU: 0x16E, offset: 0x16E, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x2B4, symBinAddr: 0x10000125C, symSize: 0x110 }
-  - { offsetInCU: 0x1BC, offset: 0x1BC, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x3C4, symBinAddr: 0x10000136C, symSize: 0xD4 }
-  - { offsetInCU: 0x219, offset: 0x219, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x498, symBinAddr: 0x100001440, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x2C0, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001464, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x33D, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001464, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x38F, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000015EC, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x3B7, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100001610, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x417, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x1000016E0, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x485, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001838, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x4D7, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x10000196C, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x657, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001AC0, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x672, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001B34, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x697, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x6BB, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001E34, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x6E0, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x706, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001C2C, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x72B, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x9AA, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001AC0, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x9DC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001B74, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0xA04, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001B98, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0xA56, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001DB4, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0xAA8, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001E0C, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xAD0, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001EA8, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xAF8, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001ED0, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xB0D, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100001F10, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xC56, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FE4, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xC7D, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xCD2, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xCE7, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xCF0, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FE4, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xD05, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100002014, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xD29, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000020BC, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xD5B, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000021BC, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xD7F, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000021F4, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xDF7, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022E4, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xE1A, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022E4, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xE7A, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100002378, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xEDA, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000023EC, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xF1E, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100002458, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xFBC, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024B8, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xFE9, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024B8, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0x103B, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000025A8, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x10B9, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100002784, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x1132, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000027A8, symSize: 0x70 }
-  - { offsetInCU: 0x48, offset: 0x1154, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000027A8, symSize: 0x70 }
-  - { offsetInCU: 0x8C, offset: 0x1198, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100002818, symSize: 0xB0 }
-  - { offsetInCU: 0xC2, offset: 0x11CE, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x1000028C8, symSize: 0x38 }
-  - { offsetInCU: 0xF4, offset: 0x1200, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100002900, symSize: 0x180 }
-  - { offsetInCU: 0x1A4, offset: 0x12B0, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002A80, symSize: 0x158 }
-  - { offsetInCU: 0x200, offset: 0x130C, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002BD8, symSize: 0x108 }
-  - { offsetInCU: 0x25C, offset: 0x1368, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002CE0, symSize: 0xB0 }
-  - { offsetInCU: 0x2AE, offset: 0x13BA, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002D90, symSize: 0xF0 }
-  - { offsetInCU: 0x30A, offset: 0x1416, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002E80, symSize: 0xC0 }
-  - { offsetInCU: 0x26, offset: 0x1551, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002F40, symSize: 0x214 }
-  - { offsetInCU: 0x62, offset: 0x158D, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002F40, symSize: 0x214 }
-  - { offsetInCU: 0xD0, offset: 0x15FB, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x214, symBinAddr: 0x100003154, symSize: 0x5CC }
-  - { offsetInCU: 0x251, offset: 0x177C, size: 0x8, addend: 0x0, symName: _broadcastCmd, symObjAddr: 0x7E0, symBinAddr: 0x100003720, symSize: 0x18 }
-  - { offsetInCU: 0x287, offset: 0x17B2, size: 0x8, addend: 0x0, symName: _listCmd, symObjAddr: 0x7F8, symBinAddr: 0x100003738, symSize: 0x10 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000CEC, symSize: 0x9C }
+  - { offsetInCU: 0x5D, offset: 0x5D, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000CEC, symSize: 0x9C }
+  - { offsetInCU: 0xAF, offset: 0xAF, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x9C, symBinAddr: 0x100000D88, symSize: 0x98 }
+  - { offsetInCU: 0xEF, offset: 0xEF, size: 0x8, addend: 0x0, symName: _sendFlag1, symObjAddr: 0x134, symBinAddr: 0x100000E20, symSize: 0xC0 }
+  - { offsetInCU: 0x14B, offset: 0x14B, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0x1F4, symBinAddr: 0x100000EE0, symSize: 0xC0 }
+  - { offsetInCU: 0x18B, offset: 0x18B, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x2B4, symBinAddr: 0x100000FA0, symSize: 0xD0 }
+  - { offsetInCU: 0x1CF, offset: 0x1CF, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x384, symBinAddr: 0x100001070, symSize: 0xF8 }
+  - { offsetInCU: 0x20F, offset: 0x20F, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x47C, symBinAddr: 0x100001168, symSize: 0xD4 }
+  - { offsetInCU: 0x26C, offset: 0x26C, size: 0x8, addend: 0x0, symName: _flagCheck, symObjAddr: 0x550, symBinAddr: 0x10000123C, symSize: 0x98 }
+  - { offsetInCU: 0x2AC, offset: 0x2AC, size: 0x8, addend: 0x0, symName: _printMCMsgs, symObjAddr: 0x5E8, symBinAddr: 0x1000012D4, symSize: 0x198 }
+  - { offsetInCU: 0x26, offset: 0x393, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000146C, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x410, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000146C, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x462, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000015F4, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x48A, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100001618, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x4EA, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x1000016E8, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x558, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001840, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x5AA, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001974, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x72A, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001AC8, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x745, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001B3C, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x76A, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x78E, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001E3C, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x7B3, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x7D9, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001C34, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x7FE, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0xA7D, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001AC8, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0xAAF, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001B7C, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0xAD7, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001BA0, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0xB29, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001DBC, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xB7B, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001E14, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xBA3, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001EB0, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xBCB, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001ED8, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xBE0, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100001F18, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xD29, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FEC, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xD50, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xDA5, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xDBA, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xDC3, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FEC, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xDD8, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x10000201C, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xDFC, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000020C4, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xE2E, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000021C4, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xE52, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000021FC, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xECA, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022EC, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xEED, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022EC, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xF4D, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100002380, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xFAD, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000023F4, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xFF1, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100002460, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0x108F, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024C0, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0x10BC, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024C0, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0x110E, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000025B0, symSize: 0x1C8 }
+  - { offsetInCU: 0x123, offset: 0x118C, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2B8, symBinAddr: 0x100002778, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x1205, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000279C, symSize: 0x70 }
+  - { offsetInCU: 0x4D, offset: 0x122C, size: 0x8, addend: 0x0, symName: _handletable, symBinAddr: 0x1000080A8, symSize: 0x0 }
+  - { offsetInCU: 0xE2, offset: 0x12C1, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000279C, symSize: 0x70 }
+  - { offsetInCU: 0x126, offset: 0x1305, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x10000280C, symSize: 0xC8 }
+  - { offsetInCU: 0x14A, offset: 0x1329, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x138, symBinAddr: 0x1000028D4, symSize: 0x38 }
+  - { offsetInCU: 0x16E, offset: 0x134D, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x170, symBinAddr: 0x10000290C, symSize: 0x19C }
+  - { offsetInCU: 0x210, offset: 0x13EF, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x30C, symBinAddr: 0x100002AA8, symSize: 0x18C }
+  - { offsetInCU: 0x25E, offset: 0x143D, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x498, symBinAddr: 0x100002C34, symSize: 0x11C }
+  - { offsetInCU: 0x2AC, offset: 0x148B, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x5B4, symBinAddr: 0x100002D50, symSize: 0xBC }
+  - { offsetInCU: 0x2F0, offset: 0x14CF, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x670, symBinAddr: 0x100002E0C, symSize: 0xD8 }
+  - { offsetInCU: 0x26, offset: 0x1570, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
+  - { offsetInCU: 0x62, offset: 0x15AC, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
+  - { offsetInCU: 0xD0, offset: 0x161A, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x214, symBinAddr: 0x1000030F8, symSize: 0x5CC }
+  - { offsetInCU: 0x251, offset: 0x179B, size: 0x8, addend: 0x0, symName: _broadcastCmd, symObjAddr: 0x7E0, symBinAddr: 0x1000036C4, symSize: 0x18 }
+  - { offsetInCU: 0x287, offset: 0x17D1, size: 0x8, addend: 0x0, symName: _listCmd, symObjAddr: 0x7F8, symBinAddr: 0x1000036DC, symSize: 0x10 }
 ...
