--- a/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
+++ b/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
@@ -2,66 +2,67 @@
 triple:          'arm64-apple-darwin'
 binary-path:     server
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000105C, symSize: 0x5C }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000105C, symSize: 0x5C }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x5C, symBinAddr: 0x1000010B8, symSize: 0x98 }
-  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xF4, symBinAddr: 0x100001150, symSize: 0x88 }
-  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x17C, symBinAddr: 0x1000011D8, symSize: 0x34 }
-  - { offsetInCU: 0x157, offset: 0x157, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x1B0, symBinAddr: 0x10000120C, symSize: 0x124 }
-  - { offsetInCU: 0x197, offset: 0x197, size: 0x8, addend: 0x0, symName: _flagCheck, symObjAddr: 0x2D4, symBinAddr: 0x100001330, symSize: 0xD8 }
-  - { offsetInCU: 0x26, offset: 0x216, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001408, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x293, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001408, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x2E5, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100001590, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x30D, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000015B4, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x36D, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100001684, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x3DB, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x1000017DC, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x42D, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001910, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x5AD, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001A64, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x5C8, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001AD8, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x5ED, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x611, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001DD8, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x636, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x65C, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001BD0, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x681, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x900, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001A64, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x932, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001B18, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x95A, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001B3C, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x9AC, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001D58, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0x9FE, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001DB0, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xA26, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001E4C, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xA4E, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001E74, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xA63, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100001EB4, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xBAC, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001F88, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xBD3, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xC28, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xC3D, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xC46, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001F88, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xC5B, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100001FB8, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xC7F, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100002060, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xCB1, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100002160, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xCD5, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100002198, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xD4D, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002288, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xD70, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002288, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xDD0, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x10000231C, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xE30, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100002390, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xE74, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000023FC, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xF12, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x10000245C, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xF3F, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x10000245C, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0xF91, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x10000254C, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x100F, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100002728, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x1088, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000274C, symSize: 0x70 }
-  - { offsetInCU: 0x48, offset: 0x10AA, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x10000274C, symSize: 0x70 }
-  - { offsetInCU: 0x8C, offset: 0x10EE, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x1000027BC, symSize: 0xB0 }
-  - { offsetInCU: 0xC2, offset: 0x1124, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x10000286C, symSize: 0x38 }
-  - { offsetInCU: 0xF4, offset: 0x1156, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x1000028A4, symSize: 0x180 }
-  - { offsetInCU: 0x1A4, offset: 0x1206, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100002A24, symSize: 0x158 }
-  - { offsetInCU: 0x200, offset: 0x1262, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100002B7C, symSize: 0x108 }
-  - { offsetInCU: 0x25C, offset: 0x12BE, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100002C84, symSize: 0xB0 }
-  - { offsetInCU: 0x2AE, offset: 0x1310, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x100002D34, symSize: 0xF0 }
-  - { offsetInCU: 0x30A, offset: 0x136C, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x100002E24, symSize: 0xC0 }
-  - { offsetInCU: 0x26, offset: 0x14A7, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
-  - { offsetInCU: 0x62, offset: 0x14E3, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002EE4, symSize: 0x214 }
-  - { offsetInCU: 0xD0, offset: 0x1551, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x214, symBinAddr: 0x1000030F8, symSize: 0x5CC }
-  - { offsetInCU: 0x251, offset: 0x16D2, size: 0x8, addend: 0x0, symName: _broadcastCmd, symObjAddr: 0x7E0, symBinAddr: 0x1000036C4, symSize: 0x18 }
-  - { offsetInCU: 0x287, offset: 0x1708, size: 0x8, addend: 0x0, symName: _listCmd, symObjAddr: 0x7F8, symBinAddr: 0x1000036DC, symSize: 0x10 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000D6C, symSize: 0x64 }
+  - { offsetInCU: 0x46, offset: 0x46, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100000D6C, symSize: 0x64 }
+  - { offsetInCU: 0xA6, offset: 0xA6, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x64, symBinAddr: 0x100000DD0, symSize: 0x98 }
+  - { offsetInCU: 0xEA, offset: 0xEA, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xFC, symBinAddr: 0x100000E68, symSize: 0x88 }
+  - { offsetInCU: 0x12A, offset: 0x12A, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x184, symBinAddr: 0x100000EF0, symSize: 0x34 }
+  - { offsetInCU: 0x15C, offset: 0x15C, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x1B8, symBinAddr: 0x100000F24, symSize: 0x114 }
+  - { offsetInCU: 0x19C, offset: 0x19C, size: 0x8, addend: 0x0, symName: _flagCheck, symObjAddr: 0x2CC, symBinAddr: 0x100001038, symSize: 0x1AC }
+  - { offsetInCU: 0x206, offset: 0x206, size: 0x8, addend: 0x0, symName: _processMCMsgs, symObjAddr: 0x478, symBinAddr: 0x1000011E4, symSize: 0x27C }
+  - { offsetInCU: 0x26, offset: 0x382, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001460, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x3FF, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001460, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x451, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000015E8, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x479, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x10000160C, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x4D9, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x1000016DC, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x547, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100001834, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x599, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100001968, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x719, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001ABC, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x734, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100001B30, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x759, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x77D, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100001E30, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x7A2, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x7C8, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100001C28, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x7ED, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0xA6C, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100001ABC, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0xA9E, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100001B70, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0xAC6, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100001B94, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0xB18, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100001DB0, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xB6A, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100001E08, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xB92, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100001EA4, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xBBA, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100001ECC, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xBCF, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100001F0C, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xD18, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FE0, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xD3F, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xD94, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xDA9, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xDB2, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100001FE0, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xDC7, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100002010, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xDEB, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000020B8, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xE1D, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000021B8, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xE41, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000021F0, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xEB9, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022E0, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xEDC, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000022E0, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xF3C, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100002374, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xF9C, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000023E8, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xFE0, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100002454, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0x107E, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024B4, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0x10AB, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000024B4, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0x10FD, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000025A4, symSize: 0x1C8 }
+  - { offsetInCU: 0x123, offset: 0x117B, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2B8, symBinAddr: 0x10000276C, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x11F4, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x70 }
+  - { offsetInCU: 0x4D, offset: 0x121B, size: 0x8, addend: 0x0, symName: _handletable, symBinAddr: 0x1000080A8, symSize: 0x0 }
+  - { offsetInCU: 0xE2, offset: 0x12B0, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x70 }
+  - { offsetInCU: 0x126, offset: 0x12F4, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100002800, symSize: 0xC8 }
+  - { offsetInCU: 0x14A, offset: 0x1318, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x138, symBinAddr: 0x1000028C8, symSize: 0x38 }
+  - { offsetInCU: 0x16E, offset: 0x133C, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x170, symBinAddr: 0x100002900, symSize: 0x19C }
+  - { offsetInCU: 0x210, offset: 0x13DE, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x30C, symBinAddr: 0x100002A9C, symSize: 0x18C }
+  - { offsetInCU: 0x25E, offset: 0x142C, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x498, symBinAddr: 0x100002C28, symSize: 0x11C }
+  - { offsetInCU: 0x2AC, offset: 0x147A, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x5B4, symBinAddr: 0x100002D44, symSize: 0xBC }
+  - { offsetInCU: 0x2F0, offset: 0x14BE, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x670, symBinAddr: 0x100002E00, symSize: 0xD8 }
+  - { offsetInCU: 0x26, offset: 0x155F, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002ED8, symSize: 0x214 }
+  - { offsetInCU: 0x62, offset: 0x159B, size: 0x8, addend: 0x0, symName: _readCommand, symObjAddr: 0x0, symBinAddr: 0x100002ED8, symSize: 0x214 }
+  - { offsetInCU: 0xD0, offset: 0x1609, size: 0x8, addend: 0x0, symName: _sendMsgCmd, symObjAddr: 0x214, symBinAddr: 0x1000030EC, symSize: 0x5CC }
+  - { offsetInCU: 0x251, offset: 0x178A, size: 0x8, addend: 0x0, symName: _broadcastCmd, symObjAddr: 0x7E0, symBinAddr: 0x1000036B8, symSize: 0x18 }
+  - { offsetInCU: 0x287, offset: 0x17C0, size: 0x8, addend: 0x0, symName: _listCmd, symObjAddr: 0x7F8, symBinAddr: 0x1000036D0, symSize: 0x10 }
 ...
